# init-file-checker

./: .flake8  Makefile  README.md  init_file_checker.py  pylintrc  pyproject.toml  test_init_file_checker.py
.circleci/: config.yml
.github/workflows/: build.yaml
